fixed mis-aligned icon hide success message when staging files improve action button hover

--- a/app/assets/stylesheets/pages/repo.scss
+++ b/app/assets/stylesheets/pages/repo.scss
@@ -189,7 +189,7 @@
     display: block;
     position: relative;
     top: 1px;
-    right: 3px;
+    right: -2px;
   }
 
   &:not([disabled]):hover {
